# api/dungeonsandtrolls.swagger.json
@@ -577,7 +577,8 @@
         "scalar": {
           "type": "number",
           "format": "float",
-          "x-nullable": true
+          "x-nullable": true,
+          "title": "TODO constant"
         }
       }
     },
@@ -608,8 +609,8 @@
           "format": "float"
         },
         "skillPoints": {
-          "type": "integer",
-          "format": "int32"
+          "type": "number",
+          "format": "float"
         },
         "effects": {
           "type": "array",
@@ -641,6 +642,10 @@
         },
         "yell": {
           "$ref": "#/definitions/dungeonsandtrollsMessage",
+          "x-nullable": true
+        },
+        "assignSkillPoints": {
+          "$ref": "#/definitions/dungeonsandtrollsAttributes",
           "x-nullable": true
         }
       }
@@ -739,6 +744,10 @@
         "duration": {
           "type": "integer",
           "format": "int32"
+        },
+        "CasterId": {
+          "type": "string",
+          "title": "Internal caster id field"
         }
       }
     },
@@ -766,7 +775,9 @@
         "BUY",
         "EQUIP",
         "ERROR",
-        "SKILL"
+        "SKILL",
+        "DEATH",
+        "SCORE"
       ],
       "default": "DAMAGE"
     },
@@ -1191,7 +1202,8 @@
         },
         "scalar": {
           "$ref": "#/definitions/dungeonsandtrollsAttributes",
-          "x-nullable": true
+          "x-nullable": true,
+          "title": "TODO constant"
         }
       }
     },
